--- a/style.css
+++ b/style.css
@@ -22,12 +22,22 @@ h1 {
     margin: 10px;
 }
 
-.size-changer {
+button {
     padding: 16px 60px;
+    font-size: 16px;
 }
 
-.grid {
+.buttons {
+    display: flex;
+    width: 700px;
+    justify-content: space-evenly;
+}
+
+.grid-toggle {
     border: 1px solid black;
+}
+
+.white {
     background-color: white;
 }
 
